# dippy-windows

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync-parable.yml
docs/: config-example.dippy-windows
scripts/: sync_parable.py
src/dippy_windows/: hook.py  types.py
src/dippy_windows/bash/: allowlists.py  analyzer.py
src/dippy_windows/cmd/: analyzer.py
src/dippy_windows/config/: loader.py  parser.py  policy.py  rules.py
src/dippy_windows/powershell/: allowlists.py  analyzer.py  tokenizer.py
tests/: test_hook.py  test_hook_config.py  test_types.py
tests/bash/: test_allowlists.py  test_analyzer.py  test_analyzer_config.py
tests/cmd/: test_analyzer.py  test_analyzer_config.py
tests/config/: test_loader.py  test_parser.py  test_policy.py  test_rules.py
tests/powershell/: test_allowlists.py  test_analyzer.py  test_analyzer_config.py  test_tokenizer.py
