[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dippy-windows"
version = "0.1.0"
description = "Claude Code hook — auto-approves safe Bash, PowerShell, and CMD commands on Windows"
requires-python = ">=3.14"
dependencies = []

[project.urls]
Repository = "https://github.com/hpsmcgregor/dippy-windows"

[project.scripts]
dippy-windows = "dippy_windows.hook:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]
